fix transparent spacing between msgs

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@
   top: -5px;
   bottom: -5px;
   border-style: solid;
-  border-width: 5px 0;
+  border-width: 6px 0;
   border-color: #fff;
 }
 .msg-wrapper > .bubble {
